--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,22 @@
 buildscript {
-    ext.kotlin_version = "1.4.30"
-    ext.nav_version = '2.4.1'
-    ext.dataStoreVersion = "1.0.0-alpha02"
-
-
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.31-alpha"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
