--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -41,6 +42,8 @@ android {
         jvmTarget = '1.8'
         freeCompilerArgs += "-Xopt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
     }
+
+
 }
 
 dependencies {
@@ -72,12 +75,6 @@ dependencies {
     // Room
     implementation "androidx.room:room-ktx:2.4.2"
     kapt "androidx.room:room-compiler:2.5.0-alpha02"
-
-    // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
-
-    // ViewPager2
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     // Fragment
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
